--- a/FirstFrontEndTask.html
+++ b/FirstFrontEndTask.html
@@ -5,20 +5,20 @@
     <title>FirstTask</title>
 </head>
 <body>
-<table border="1" width="100%" height="100%">
+<table border="1" width="100%" height="100%" bordercolor="black" cellspacing="0" border-collapse="collapse" cellpadding="0">
     <tr>
         <td colspan="3">
-            <table border="1" width="100%">
+            <table border="1" width="100%" bordercolor="black" cellspacing="0">
                 <tr>
                     <td height="100px" width="200px">
                         <a href="FirstFrontEndTask.html">
                             <img src="logo.png" width="200" height="100" alt="EPAM">
                         </a>
                     </td>
-                    <td height="100px">
-                        Epam times
+                    <td height="100px" align="center">
+                        <font size="6"><strong>Epam times</strong></font>
                     </td>
-                    <td height="100px" width="100px">
+                    <td height="100px" width="100px" align="center">
                         <img src="menu.png" width="75" height="75" alt="EPAM">
                     </td>
                 </tr>
@@ -26,57 +26,49 @@
         </td>
     </tr>
     <tr>
-        <td width="200px">
-            1
-        </td>
-        <td>
-            <table border="1">
+        <td width="200px" valign="top">
+            <table border="0" width="204px"  bordercolor="black" cellspacing="0" border-collapse="collapse" cellpadding="0">
                 <tr>
-                    <td>
-                        <img src="no_image.png" alt="no_image" width="100px">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-                        Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
-                        quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo,
-                        rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-                        Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
-                        Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend
-                        ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra
-                        nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue.
-                        Curabitur ullamcorper ultricies nisi. Nam eget dui.
-                    </td>
-                    <td>
-                        <img src="no_image.png" alt="no_image" width="100px">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-                        Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
-                        quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo,
-                        rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-                        Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
-                        Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend
-                        ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra
-                        nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue.
-                        Curabitur ullamcorper ultricies nisi. Nam eget dui.
+                    <td align="center" bgcolor="aqua" height="60px">
+                        <strong>Link list 1</strong>
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="2">
-                        4
+                    <td>
+                        <ul type="none">
+                            <li><a href="#">Lorem</a></li>
+                            <li><a href="#">Ipsum</a></li>
+                            <li><a href="#">Dolor</a></li>
+                            <li><a href="#">Sit</a></li>
+                            <li><a href="#">Amet</a></li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" bgcolor="aqua" height="60px">
+                        <strong>Link list 2</strong>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <ul type="none">
+                            <li><a href="#">Lorem</a></li>
+                            <li><a href="#">Ipsum</a></li>
+                            <li><a href="#">Dolor</a></li>
+                            <li><a href="#">Sit</a></li>
+                            <li><a href="#">Amet</a></li>
+                        </ul>
                     </td>
                 </tr>
             </table>
         </td>
-        <td width="300px">
-            <table border="1">
+        <td>
+            <table border="1" height="100%" bordercolor="black" cellspacing="0" cellpadding="10" border-collapse="collapse" cellpadding="0" >
                 <tr>
-                    <td>
-                        5
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="no_image.png" alt="no_image" width="100px">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                    <td valign="top">
+                        <img src="no_image.png" alt="no_image" width="150px" align="left">
+                        <p align="center"><a href="FirstFrontEndTask.html"><strong>Lorem ipsum</strong></a></p>
+                        <font size="4">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
                         Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
                         mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
                         quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo,
@@ -86,6 +78,225 @@
                         ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra
                         nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue.
                         Curabitur ullamcorper ultricies nisi. Nam eget dui.
+                        </font>
+                    </td>
+                    <td valign="top">
+                        <img src="no_image.png" alt="no_image" width="150px" align="left">
+                        <p align="center"><a href="FirstFrontEndTask.html"><strong>Lorem ipsum</strong></a></p>
+                        <font size="4">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                        Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
+                        quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo,
+                        rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+                        Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
+                        Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend
+                        ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra
+                        nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue.
+                        Curabitur ullamcorper ultricies nisi. Nam eget dui.
+                        </font>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" align="center">
+                        <font color="red" size="5">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</font>
+                        <table border="1" width="96%" bordercolor="black" cellspacing="0" border-collapse="collapse" cellpadding="0">
+                            <tr>
+                                <td align="center">
+                                    <strong>Lorem</strong>
+                                </td>
+
+                                <td align="center">
+                                    <strong>Ipsum</strong>
+                                </td>
+
+                                <td align="center">
+                                    <strong>Dolor</strong>
+                                </td>
+
+                                <td align="center">
+                                    <strong>Sit</strong>
+                                </td>
+
+                                <td align="center">
+                                    <strong>Amet</strong>
+                                </td>
+
+                                <td align="center">
+                                    <strong>Consectetuer</strong>
+                                </td>
+
+                                <td align="center">
+                                    <strong>Adipiscing</strong>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+
+                                <td>
+                                    #######
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </td>
+        <td width="400px" valign="top">
+            <table border="1" height="100%" bordercolor="black" cellspacing="0" border-collapse="collapse" cellpadding="10">
+                <tr bgcolor="#d3d3d3">
+                    <td valign="top">
+                        <ul type="none" >
+                            <li><label>Login:</label></li>
+                            <li><input type="text" placeholder="Enter the login"></li>
+                            <li> </li>
+                            <li><label>Password:</label></li>
+                            <li> </li>
+                            <li><input type="password" placeholder="Enter the password"></li>
+                            <li> </li>
+                            <li><input type="checkbox"><label>Remember me</label></li>
+                            <li><a href="FirstFrontEndTask.html"><img src="button.png" width="150" alt="login"></a></li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td valign="top">
+                        <img src="no_image.png" alt="no_image" width="150px" align="left">
+                        <p align="center"><a href="FirstFrontEndTask.html"><strong>Lorem ipsum</strong></a></p>
+                        <font size="4">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                        Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
+                        quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo,
+                        rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+                        Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
+                        Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend
+                        ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra
+                        nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue.
+                        Curabitur ullamcorper ultricies nisi. Nam eget dui.
+                        </font>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="3">
+            <table>
+                <tr>
+                    <td>
+                        © 2014 Основы HTML
                     </td>
                 </tr>
             </table>
